Revert "не работает тест"
This reverts commit c330d62c5e4ee515c5c7fb88e6c3065bac97d953.