@@ -1,17 +1,26 @@
 package ru.nesterov.google;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.api.client.util.DateTime;
+import com.google.api.services.calendar.Calendar;
+import com.google.api.services.calendar.model.Event;
+import com.google.api.services.calendar.model.EventDateTime;
 import com.google.api.services.calendar.model.Events;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.SpyBean;
+import org.springframework.test.context.ContextConfiguration;
 import ru.nesterov.dto.CalendarType;
 import ru.nesterov.dto.EventDto;
+
+import java.io.IOException;
 import java.time.LocalDateTime;
-import java.util.Calendar;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
@@ -19,42 +28,39 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
+@ContextConfiguration(classes = {
+        GoogleCalendarClient.class,
+})
 public class GoogleCalendarClientTest {
+    @MockBean
+    private Calendar calendar;
 
-    @Mock
+    @MockBean
     private GoogleCalendarProperties googleCalendarProperties;
 
-    @Mock
+    @MockBean
     private ObjectMapper objectMapper;
 
-    @Mock
+    @MockBean
     private EventStatusService eventStatusService;
 
+    @SpyBean
     private GoogleCalendarClient spyClient;
-
-    @BeforeEach
-    void setUp() {
-        when(googleCalendarProperties.getApplicationName()).thenReturn("client-revenue-analyzer");
-        when(googleCalendarProperties.getServiceAccountFilePath()).thenReturn("src/test/resources/test-service-account.json");
-        Calendar mockCalendar = mock(Calendar.class);
-        spyClient = spy(new GoogleCalendarClient(googleCalendarProperties, objectMapper, eventStatusService));
-        doReturn(mockCalendar).when(spyClient).createCalendarService();
-    }
 
     @Test
     public void testGetEventsBetweenDates_withPaging() throws Exception {
+
         Events firstPage = mock(Events.class);
         Events secondPage = mock(Events.class);
 
         when(firstPage.getNextPageToken()).thenReturn("token");
-        when(firstPage.getItems()).thenReturn(Collections.emptyList());
+        when(firstPage.getItems()).thenReturn(List.of());
 
         when(secondPage.getNextPageToken()).thenReturn(null);
-        when(secondPage.getItems()).thenReturn(Collections.emptyList());
+        when(secondPage.getItems()).thenReturn(List.of());
 
-        doReturn(firstPage).when(spyClient).getEventsBetweenDates(anyString(), any(Date.class), any(Date.class), eq(null));
-
+        doReturn(firstPage).when(spyClient).getEventsBetweenDates(anyString(), any(Date.class), any(Date.class), eq(null));  // оно??
         doReturn(secondPage).when(spyClient).getEventsBetweenDates(anyString(), any(Date.class), any(Date.class), eq("token"));
 
         List<EventDto> result = spyClient.getEventsBetweenDates("calendarId", CalendarType.PLAIN, LocalDateTime.now(), LocalDateTime.now().plusDays(1));
